refactor(pig-auth): 重构认证模块代码结构和逻辑
- 更新 Redis 配置
-重构 BaseEntity 类
- 修改 ConfirmViewHandle 类的实现
- 更新 CustomSaTokenListener 接口和实现
- 调整 DeptExcelVo 类
- 重构 EnablePigResourceServer 注解
- 更新 FromXssException 类
-调整 GenCreateTableVO 类
- 重构 GenGroupServiceImpl 类
- 更新 GenTableColumnEntity 类
- 调整 GlobalBizExceptionHandler 类
- 更新 JacksonXssException 类
- 调整 JavaClassTaskInvok 类
- 重构 MessageSourceConfiguration 类
- 更新 MobileGrantTypeHandle 类的实现
- 调整 MybatisPlusMetaObjectHandler 类
- 更新 NoLoginViewHandle 类
-调整 PasswordDecoderFilter 类- 重构 PasswordLoginHandle 类的实现
- 调整 PermitAllUrlProperties 类

build(pom): 更新项目依赖版本

- 更新 MySQL 版本至 9.2.0
- 更新 Hutool 版本至 5.8.39
- 更新 SA-Token 版本至 1.44.0
- 更新 Springdoc 版本至 2.8.8
- 更新 Swagger 核心版本至2.2.36
- 更新 MyBatis-Plus 版本至 3.5.12
- 添加 Knife4j 开放式 UI 依赖
- 更新 Spring Boot 版本至 3.5.5